feat(84): RSR-433 create datasets from extRef
Signed-off-by: massifben <105049157+massifben@users.noreply.github.com>